# CCSDS-HSI-Compression

./: .gitignore  LICENSE  README.md  README_OPTIMIZED.md  SPEED_COMPARISON_README.md  SpectralPredictor_Documentation.md  batch_optimized_compressor.py  ccsds_compressor.py  claude.md  entropy_coder.py  environment.yaml  install_dev.sh  optimized_compressor.py  optimized_quantizer.py  pyproject.toml  quantizer.py  requirements.txt  sample_representative.py  setup.py  test_ccsds.py  test_float_handling.py  test_lossless.py  test_minimal_speed.py  test_quick_speed.py
assets/: benchmark_local.csv  benchmark_lowrate.csv
docs/: CCSDS_COMPLIANCE_FIXES.md
examples/: Untitled.ipynb  __init__.py  benchmark.py  gpu_optimized_example.py  lossless.ipynb  patch_codec.py  plot_benchmark.py
examples/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
pdfs/: pipeline_notes.md
src/: __init__.py
src/ccsds/: __init__.py  bitstream.py  ccsds_compressor.py  ccsds_entropy_coder.py  cli.py  codec.py  encoding_orders.py  entropy_coder.py  low_entropy_tables.py  metrics.py  predictor.py  quantizer.py  rice_coder.py  sample_representative.py  test_reverse_decoding.py
src/ccsds/core/: __init__.py  _codec_numba.py  compressor.py  predictor.py  reference_codec.py  sample_representative.py
src/ccsds/entropy/: __init__.py  _hybrid_numba.py  annexb_tables.json  hybrid.py  hybrid_coder.py  low_entropy_tables.py
src/ccsds/io/: __init__.py  ccsds_header.py  header.py
src/ccsds/metrics/: __init__.py  quality_metrics.py
src/ccsds/optimized/: batch_optimized_compressor.py  optimized_compressor.py  optimized_entropy_coder.py
src/optimized/: __init__.py  batch_optimized_compressor.py  optimized_compressor.py  optimized_entropy_coder.py  optimized_predictor.py
tests/: __init__.py  run_full_cube.py  synthetic_hsi.py  test_components.py  test_full_optimized.py  test_image_generator.py  test_lossless.py  test_lossless_minimal.py  test_performance.py  test_reference_codec.py  utils.py
tests/performance/: __init__.py  test_quick_speed.py  test_speed_comparison.py
tests/unit/: __init__.py  full_compliance_breakdown.py  test_32bit_samples.py  test_batch_optimized.py  test_ccsds.py  test_components.py  test_enhanced_prediction.py  test_float_validation.py  test_full_optimized.py  test_image_generator.py  test_lossless.py  test_lossless_breakdown.py  test_lossless_minimal.py  test_lossless_working.py  test_optimized_basic.py  test_performance.py  test_predictor.py  test_simple_lossless.py
tools/: evaluate.py  extract_annexb_tables.py
