[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ccsds-123-compressor"
version = "2.0.0"
description = "Pure-integer CCSDS-123.0-B-2 lossless / near-lossless hyperspectral image codec"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "CCSDS Implementation Team"}
]
keywords = ["compression", "hyperspectral", "multispectral", "ccsds", "image-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

# The codec is numpy-only. numba (fast path), torch (tensor I/O) and scipy
# (loading .mat test data) are optional.
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
numba = ["numba>=0.57"]
torch = ["torch>=1.9.0"]
data = ["scipy>=1.7.0"]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.txt", "*.yaml", "*.yml"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
